Fixed character index overflowing content

--- a/public/styles/spell/spell_index.css
+++ b/public/styles/spell/spell_index.css
@@ -55,3 +55,7 @@
 .spell-index .long-size {
   width: 75%;
 }
+
+.spell-index .short-size {
+  width: 25%
+}
